[options]
scripts = 
	
dependency_links = 
	
packages = find:
install_requires = 
	ipython
	jsbeautifier
	BTrees 
	graphql_py
	sqlparse
	pytest
	base36
	prompt_toolkit>=3.0.4
	appyratus

[options.extras_require]
falcon = requests; falcon
grpc = google; grpcio; grpcio_tools
game = pygame
redis = redis
celery = celery; mock
websockets = websockets
sqlalchemy = sqlalchemy

[metadata]
name = ravel
description = Python's first meta-framework
long_description = file: README.md
long_description_content_type = text/markdown
version = 2.0.4
author = Gigaquads
author_email = notdsk@gmail.com
url = https://github.com/gigaquads/ravel.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.8
	License :: OSI Approved :: MIT License

