[options]
scripts = 
	
dependency_links = 
	
packages = find:
install_requires = 
	ipython
	jsbeautifier
	BTrees 
	graphql_py
	sqlparse
	pytest
	base36
	prompt_toolkit>=3.0.4
	pycryptodome
	appyratus

[options.extras_require]
falcon = requests; falcon>=3.0.0a1
grpc = google; grpcio; grpcio_tools
game = pygame
redis = redis
celery = celery; mock
websockets = websockets
sqlalchemy = sqlalchemy; geoalchemy2

[metadata]
name = ravel
description = Python's first meta-framework
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.1
author = Gigaquads
author_email = what@gigaquads.com
url = https://github.com/gigaquads/ravel.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

