[options]
scripts = 
	
dependency_links = 
	
packages = find:
install_requires = 
	ipython==7.19.0
	jsbeautifier==1.13.0
	BTrees==4.7.2
	graphql_py==0.8.1
	sqlparse==0.4.1
	pytest==6.1.2
	base36==0.1.1
	prompt_toolkit>=3.0.4
	pycryptodome==3.9.9
	jinja2==2.11.1
	appyratus>=3.0.3

[options.extras_require]
falcon = requests; falcon>=3.0.0a1
grpc = google; grpcio; grpcio_tools
game = pygame
redis = redis
celery = celery; mock
websockets = websockets
sqlalchemy = sqlalchemy; geoalchemy2

[metadata]
name = ravel
description = Python's first meta-framework
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.2
author = Gigaquads
author_email = what@gigaquads.com
url = https://github.com/gigaquads/ravel.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

